@startuml er-database
title Diagrama ER - Base de Datos SQLite

skinparam shadowing false
skinparam linetype ortho

!theme mimeograph

entity "cultivos" as cultivos {
  * id          : INTEGER <<PK, AUTOINCREMENT>>
  --
  * nombre      : TEXT <<UNIQUE, NOT NULL>>
    deleted_at  : DATETIME <<DEFAULT NULL>>
}

entity "lotes" as lotes {
  * id            : INTEGER <<PK, AUTOINCREMENT>>
  --
  * nombre        : TEXT <<NOT NULL>>
    ubicacion     : TEXT
  * superficie_ha : REAL <<NOT NULL, > 0>>
    deleted_at    : DATETIME <<DEFAULT NULL>>
}

entity "cosechas" as cosechas {
  * id            : INTEGER <<PK, AUTOINCREMENT>>
  --
  * lote_id       : INTEGER <<FK>>
  * cultivo_id    : INTEGER <<FK>>
  * temporada     : TEXT <<NOT NULL>>
    fecha_cosecha : TEXT
  * rendimiento   : REAL <<NOT NULL, >= 0>>
    humedad_pct   : REAL
    observaciones : TEXT
  * created_at    : TEXT <<DEFAULT datetime('now')>>
    deleted_at    : DATETIME <<DEFAULT NULL>>
}

entity "precios_cache" as precios {
  * id           : INTEGER <<PK, AUTOINCREMENT>>
  --
  * cultivo_id   : INTEGER <<FK>>
  * precio_ton   : REAL <<NOT NULL>>
  * moneda       : TEXT <<DEFAULT 'ARS'>>
  * fuente       : TEXT <<DEFAULT 'MATba-ROFEX'>>
  * fecha_precio : TEXT <<NOT NULL>>
  * fetched_at   : TEXT <<DEFAULT datetime('now')>>
    deleted_at   : DATETIME <<DEFAULT NULL>>
  --
  UNIQUE (cultivo_id, fecha_precio)
}

lotes    ||--o{ cosechas : "lote_id\n(ON DELETE CASCADE)"
cultivos ||--o{ cosechas : "cultivo_id"
cultivos ||--o{ precios  : "cultivo_id"

note bottom of precios
  La restricción UNIQUE (cultivo_id, fecha_precio)
  garantiza una cotización por cultivo por día.
  El upsert actualiza precio_ton si ya existe.
end note

note bottom of cosechas
  La eliminación lógica de un lote propaga deleted_at a
  todas sus cosechas activas (lógica de aplicación).
  rendimiento (kg/ha) es derivado por el formulario a partir
  de la producción total en toneladas ingresada por el usuario:
    rendimiento = produccionTn x 1000 / superficie_ha
end note

note right of lotes
  Patrón de eliminación lógica (soft delete):
    deleted_at = NULL   -> registro activo
    deleted_at = <fecha> -> registro eliminado
  Todas las consultas filtran WHERE deleted_at IS NULL.
  Los registros eliminados se conservan para auditoría
  e integridad del historial productivo.
end note

@enduml
